# leaguedb

./: .Rprofile  .gitignore  README.md  pyproject.toml
league_table/: core.py  league-table.R  league_table.py  main.py
league_table/api/: sleeper.py
league_table/db/: supabase.py
matchup_history/: core.py  main.py  model.py
matchup_history/api/: sleeper.py
matchup_history/db/: supabase.py
matchup_history/test/: test_sleeper.py  test_supabase.py
matchup_table/: core.py  main.py  matchup-table.R
shared/: enum.json
shared/R/: enum.R
shared/python/: enum.py  utils.py
shared/sleeper/: matchup.py  roster.py
shared/supabase/: club.py  matchup.py  standing.py
