[project]
name = "leaguedb"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Nesheim",email = "lukenesh@me.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "supabase (>=2.17.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "polars (>=1.31.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
